<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.a222viewgroups_sharedpref_appbar.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hello_word"
        android:orderInCategory="100"
        android:title="@string/hello_word"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_splash_screen"
        android:orderInCategory="100"
        android:title="@string/splash_screen"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_subscribe"
        android:orderInCategory="100"
        android:title="@string/subscribe"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_endlessactivities"
        android:orderInCategory="100"
        android:title="@string/endlessactivities"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="Записная книжка"
        app:showAsAction="never" />

</menu>